--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -550,18 +550,7 @@ footer {
     background-color: rgba(255, 255, 255, 0.65);
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
-/* .headerlayer{
-    position: absolute;
-    top: 0;
-    padding: 50px 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: ;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, .5);
-    /* background: linear-gradient(150deg, var(--green), var(--yellow), var(--red)); */
-*/
+
 .portalCard{
     box-shadow:inset 0 0 10px #dfdfdf;
     padding: 30px;
@@ -594,9 +583,10 @@ label{
     margin-top:10px ;
 }
 .contactboxes{
-    background:url('https://img.freepik.com/premium-photo/man-playing-game-with-microphone-his-hands_916191-400744.jpg?w=1380') no-repeat center fixed;
+    background:url('https://img.freepik.com/free-photo/top-view-office-material-wooden-table_23-2148148341.jpg?t=st=1724997161~exp=1725000761~hmac=736f1b0ca78fd710f8fa1b916bd3470c0346af0dd6f46e6fa62d2dcb2a7ef60a&w=1380') no-repeat center fixed;
     background-size: cover;
-
+ 
+    
 }
 .contactbox{
    padding: 20px;
@@ -607,6 +597,13 @@ label{
    background-color: rgba(255, 255, 255, 0.35);
    border-radius: 12px;
    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+.contactbox:hover .cIcon{
+    box-shadow: 0 0 10px;
+}
+.contactbox:hover{
+   background-color: rgba(255, 255, 255, 0.6);
+
 }
 .contactbox h4{
     padding: 10px 0;
@@ -627,7 +624,7 @@ address{
 }
 .cIcon{
     background: white;
-    width:100px ;
+    width:100px;
     margin: 0 auto;
     place-content: center;
     display: grid;
@@ -644,14 +641,73 @@ address{
 }
 .mediaBox>div{
     margin: 10px 0;
-    
+    text-transform: capitalize;
 }
+
 .mediaBox>div:hover p{
-    color: white;
+    color: black;
 }
 .mediaBox>div:hover a>img{
     transform: rotateY(360deg );
 }
+.map{
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 20px #dfdfdf;
+}
+
+.citymap{
+    position: relative;
+}
+.citymap::before{
+    content: 'City Campus';
+    position: absolute;
+    text-transform: uppercase;
+    left: -50%;
+    transition: ease-in-out all .7s;
+    border: 5px solid white;
+    box-shadow:  0 0 10px #999;
+    border-radius: 10px;
+    bottom: 20%;
+    color: white;
+    z-index: 999;
+    font-weight: bolder;
+    background:linear-gradient(to right,var(--red),var(--yellow));
+    padding: 10px 40px;
+}
+.citymap:hover::before{
+    left:-20px;
+}
+.lygonmap{
+    position: relative;
+}
+.lygonmap::before{
+    content: 'Lygon Street Campus';
+    position: absolute;
+    text-transform: uppercase;
+    left: -60%;
+    transition: ease-in-out all .7s;
+    border: 5px solid white;
+    box-shadow:  0 0 10px #999;
+    border-radius: 10px;
+    bottom: 20%;
+    color: white;
+    z-index: 999;
+    font-weight: bolder;
+    background:linear-gradient(to right,var(--red),var(--yellow));
+    padding: 10px 40px;
+}
+.lygonmap:hover::before{
+    left:-20px;
+}
+.card-text{
+    color: white;
+    font-weight: bolder;
+    text-shadow:  #e0e0e0 1px 1px 0;
+    padding: 20px;
+    background-color: #f27e12b2;
+}
+
 @media (min-width:320px){
    
     .headerGrid {
