--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -416,7 +416,9 @@ footer {
 .foottab a {
     color: white;
     text-transform: none;
+    
 }
+
 
 .foottab ul li a {
     color: rgba(255, 255, 255, 0.763);
@@ -424,7 +426,7 @@ footer {
     text-transform: capitalize;
 }
 
-.foottab ul li a:hover {
+.foottab ul li a:hover,.foottab a:hover {
     color: var(--yellow);
     margin-left: 10px;
 
@@ -527,7 +529,7 @@ footer {
     background-clip: text;
     display: inline-block;
     filter: drop-shadow(-1px -3px 2px #fff);
-    font-size: 3.2rem;
+    font-size: 2.2rem;
     padding: 10px 0;
     font-weight: bold;
     text-transform: capitalize;
@@ -707,7 +709,71 @@ address{
     padding: 20px;
     background-color: #f27e12b2;
 }
-
+.step{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 30px 0;
+    justify-content: space-between;
+}
+.stepInfo h3{
+    text-transform: capitalize;
+    padding: 10px 5px;
+    color: white;
+    font-size: 16px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    font-weight: 600;
+    
+}
+.stepHeading{
+   background: white;
+    display: grid;
+    box-shadow: inset 0 0 10px #dfdfdf;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+  place-content: center;
+}
+.stepCount h1{
+    font-size: 3.5rem;
+    margin: 0;
+    font-weight: 700;
+}
+.flexUl{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+}
+.flexUl li  {
+    display: flex;
+    gap: 10px;
+    box-shadow: 0 0 10px #dfdfdf;
+        margin:  10px;
+    padding: 10px;
+}
+.flexUl li p{
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+}
+.feeContainer{
+    padding: 30px 0;
+}
+.feeContainer{
+    font-weight: bolder;
+    filter: grayscale(2)
+}
+.feeContainer:hover{
+    filter: unset;
+}
+.stickyElement{
+    position: sticky;
+    top: 0;
+    
+}
 @media (min-width:320px){
    
     .headerGrid {
