--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -522,35 +522,29 @@ footer {
     animation: wave 10s infinite alternate; */
 }
 .pageHeading{
-    color: rgba(255, 255,255, .01);
+    
     margin: 0;
-
-    border-radius:5px ;
-    background-clip: text;
-    display: inline-block;
-    filter: drop-shadow(-1px -3px 2px #fff);
+    text-align: center;
     font-size: 2.2rem;
     padding: 10px 0;
     font-weight: bold;
-    text-transform: capitalize;
+    text-transform: uppercase;
     animation: wave 3s infinite alternate;
     background-size: 250%;
-    background-image: linear-gradient(150deg,var(--yellow),var(--green),var(--red),var(--black));
-    
+    /* background-image: linear-gradient(150deg,var(--yellow),var(--green),var(--red),var(--black)); */
 }
+
 .headersection::after{
     content: ' ';
     position: absolute;
     z-index: -1;
-    width: 50%;
+    width: 100%;
     top: 0;
-    transform: skewX(-30deg);
-    bottom:0 ;
-    left: -90px;
-    backdrop-filter: blur(5px) saturate(177%);
+    bottom: -2px;  
+    backdrop-filter: blur(5px) saturate(80%);
     -webkit-backdrop-filter: blur(5px) saturate(177%);
-    background-color: rgba(255, 255, 255, 0.65);
-    border: 1px solid rgba(209, 213, 219, 0.3);
+    background: linear-gradient(to top, white, transparent);
+
 }
 
 .portalCard{
@@ -585,10 +579,8 @@ label{
     margin-top:10px ;
 }
 .contactboxes{
-    background:url('https://img.freepik.com/free-photo/top-view-office-material-wooden-table_23-2148148341.jpg?t=st=1724997161~exp=1725000761~hmac=736f1b0ca78fd710f8fa1b916bd3470c0346af0dd6f46e6fa62d2dcb2a7ef60a&w=1380') no-repeat center fixed;
+    background:url('https://shorturl.at/TT9S0') no-repeat center fixed;
     background-size: cover;
- 
-    
 }
 .contactbox{
    padding: 20px;
@@ -786,9 +778,11 @@ address{
     position: sticky;
     top: 0;
 }
+
 .collapseheader:hover{
     background: var(--green);
 }
+
 .collapseheader a{
     font-size: 16px;
     font-weight: bold;
@@ -810,7 +804,8 @@ address{
     top: 100%;
     z-index: -1;
     opacity: .4;
-    background:linear-gradient(to top,rgb(209, 209, 209),rgb(212, 212, 212)) ;
+
+    background:linear-gradient(to bottom, var(--green),rgba(255, 255, 255, 0));
 }
 .agentbox:hover{
     box-shadow: none;
@@ -823,13 +818,13 @@ address{
 }
 .agentlogo {
     padding: 10px;
+    
     filter: drop-shadow(0 0 2px #f9f9fb);
 }
 .agenttxt{
     margin-top: 10px;
-    background-color: var(--green);
+    background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0));
     padding: 20px;
-    color: white;
 }
 .agenttxt h5{
     font-weight: bolder;
@@ -845,7 +840,7 @@ address{
     margin: 5px 0;
 }
 .agenttxt ul>li>p{
-    color: rgba(255, 255, 255, 0.8);
+   
     font-size: 14px;
     font-weight: 400;
     
