--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -133,6 +133,7 @@ section:hover .heading::after{
 
 .banner {
     padding: 0;
+    margin-top: 2em;
 }
 
 .banner h1 {
@@ -715,7 +716,6 @@ address{
     content: '';
     inset: 0;
     z-index: -1;
-    left: 3%;
     background: #dfdfdf;
     height: 100%;
     width: 5px;
@@ -723,7 +723,7 @@ address{
 .step{
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     padding: 30px 0;
     justify-content: space-between;
 }
@@ -761,6 +761,7 @@ address{
 .flexUl li  {
     display: flex;
     gap: 10px;
+    align-items: center;
     box-shadow: 0 0 10px #dfdfdf;
         margin:  10px;
     padding: 10px;
@@ -795,8 +796,11 @@ address{
 }
 .agentbox{
     position: relative;
-    box-shadow: 15px 15px 30px #bebebe,
-    -15px -15px 30px #ffffff;
+    
+    filter: drop-shadow(5px 5px 7px #dfdfdf);
+    box-shadow: inset 0 0 10px #dfdfdf;
+    /* box-shadow: 15px 15px 30px #bebebe,
+    -15px -15px 30px #ffffff; */
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 30px;
@@ -806,15 +810,17 @@ address{
     position: absolute;
     inset: 0;
     bottom: 100%;
-    transition: ease-in-out all .6s;
+    transition: ease-in-out all .3s;
     top: 100%;
     z-index: -1;
     opacity: .4;
 
-    background:linear-gradient(to bottom, var(--green),rgba(255, 255, 255, 0));
+    background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0));
 }
 .agentbox:hover{
     box-shadow: none;
+    filter: none;
+    border: 1px solid #dfdfdf;
 }
 .agentbox:hover::after{
     inset: 0;
@@ -829,7 +835,7 @@ address{
 }
 .agenttxt{
     margin-top: 10px;
-    background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0));
+    /* background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0)); */
     padding: 20px;
 }
 .agenttxt h5{
@@ -842,8 +848,15 @@ address{
     list-style-type: none;
 }
 .agenttxt ul>li{
+    position: relative;
     font-size: 14px;
     margin: 5px 0;
+}
+.agenttxt ul>li::before{
+    content: '';
+    inset: 0;
+    left: -10px;
+    position: absolute;
 }
 .agenttxt ul>li>p{
    
@@ -893,6 +906,9 @@ address{
     .portalCard h4{
         font-size: .8rem;
     }
+    .steps::before{
+        left: 8%;
+    }
 }
 
 
@@ -935,6 +951,9 @@ address{
     .aboutImages{
         align-items: unset;
         justify-content: unset;
+    }
+    .steps::before{
+        left: 3%;
     }
     
 }
