--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -799,14 +799,14 @@ address{
 }
 .agentbox{
     position: relative;
-    
-    filter: drop-shadow(5px 5px 7px #dfdfdf);
+    background:url('../img/bgAgentCard.jpg') right  no-repeat;   /* filter: drop-shadow(5px 5px 7px #dfdfdf); */
     box-shadow: inset 0 0 10px #dfdfdf;
     /* box-shadow: 15px 15px 30px #bebebe,
     -15px -15px 30px #ffffff; */
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 30px;
+    z-index: 9;
 }
 .agentbox::after{
     content: ' ';
@@ -816,9 +816,7 @@ address{
     transition: ease-in-out all .3s;
     top: 100%;
     z-index: -1;
-    opacity: .4;
-
-    background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0));
+    backdrop-filter: blur(5px) ;  
 }
 .agentbox:hover{
     box-shadow: none;
@@ -838,8 +836,8 @@ address{
 }
 .agenttxt{
     margin-top: 10px;
-    
-    /* background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0)); */
+    /* opacity: 0.5;
+     background:linear-gradient(to top, var(--green),rgba(255, 255, 255, 0)); */
     padding: 20px;
 }
 .agenttxt h5{
