--- a/css/navigation.css
+++ b/css/navigation.css
@@ -159,6 +159,7 @@ body {
     position: absolute;
     left: 0;    
     top: 77px;
+    display: none;
     backdrop-filter: blur(5px);
     opacity: 0;
     right: 0;    
@@ -173,7 +174,7 @@ body {
 }
 .dropinfo>ul>li{
     /* border-bottom: 1px solid #333; */
-    padding: 10px 0;
+    padding-top: 20px;
 }
 .dropinfo>ul>li>a{
     text-transform: capitalize;
@@ -191,9 +192,9 @@ body {
 }
 
 @media only screen and (min-width: 993px) {
-    /* #drop:hover  .studentinformation {
-     height: auto;
-     } */
+    .studentinformation{
+        display: block;
+    }
 }
 
 @media only screen and (max-width: 992px) {
@@ -234,8 +235,6 @@ body {
     transform: translateY(1rem);
     border-radius: 0 0 0.25rem 0.25rem;
     border-top: 2px solid var(--mainColor);
-
-
     transition: all 0.3s ease-in-out;
 }
 
@@ -250,7 +249,6 @@ body {
     font-weight: 500;
     line-height: inherit;
     cursor: pointer;
-
     transition: all 0.35s ease;
 }
 
