--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -808,16 +808,33 @@ address{
     font-size: 16px;
     font-weight: bold;
 }
+.cardAgent{
+    padding: 10px 20px;
+    display: grid    ;
+    
+        grid-template-columns: 20% 60% 20%;
+        /* justify-content: space-between; */
+        place-content: center;
+        align-content: center;
+        align-items: center;
+
+}
 .agentbox{
     position: relative;
-    background:url('../img/bgAgentCard.jpg') right  no-repeat;   /* filter: drop-shadow(5px 5px 7px #dfdfdf); */
+    background:url('https://img.freepik.com/premium-photo/white-cement-wall-texture-backgrounds_707519-24233.jpg?w=1380') center fixed  no-repeat;   filter: drop-shadow(5px 5px 7px #dfdfdf); 
     box-shadow: inset 0 0 10px #dfdfdf;
     /* box-shadow: 15px 15px 30px #bebebe,
     -15px -15px 30px #ffffff; */
     border-radius: 10px;
     overflow: hidden;
+    background-size: cover;
     margin-bottom: 30px;
+    border: 1px solid #fff;
     z-index: 9;
+}
+.agentbox i{
+    margin-bottom: 10px;
+    color: #444;
 }
 .agentbox::after{
     content: ' ';
@@ -1029,6 +1046,11 @@ position: relative;
 .campusCard i{
     font-size: 2rem;
     color: black;
+}
+.courseCardBox{
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow:  0 0 10px #dfdfdf;
 }
 
 @media (min-width:320px){
