--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -812,7 +812,7 @@ address{
     padding: 10px 20px;
     display: grid    ;
     
-        grid-template-columns: 20% 60% 20%;
+        
         /* justify-content: space-between; */
         place-content: center;
         align-content: center;
@@ -821,7 +821,7 @@ address{
 }
 .agentbox{
     position: relative;
-    background:url('https://img.freepik.com/premium-photo/white-cement-wall-texture-backgrounds_707519-24233.jpg?w=1380') center fixed  no-repeat;   filter: drop-shadow(5px 5px 7px #dfdfdf); 
+    /* background:url('https://img.freepik.com/premium-photo/white-cement-wall-texture-backgrounds_707519-24233.jpg?w=1380') center fixed  no-repeat;   filter: drop-shadow(5px 5px 7px #dfdfdf);  */
     box-shadow: inset 0 0 10px #dfdfdf;
     /* box-shadow: 15px 15px 30px #bebebe,
     -15px -15px 30px #ffffff; */
@@ -829,8 +829,19 @@ address{
     overflow: hidden;
     background-size: cover;
     margin-bottom: 30px;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     z-index: 9;
+}
+.agentbox::before{
+    content: '';
+    z-index: -1;
+    position: absolute;
+    width: 60px;
+    transform: skew(-35deg);
+    top: 0;
+    opacity: .9;
+    bottom: 0;
+    background: #f7a30a;
 }
 .agentbox i{
     margin-bottom: 10px;
@@ -848,8 +859,9 @@ address{
 }
 .agentbox:hover{
     box-shadow: none;
+    border: 2px solid #f7a30a;
     filter: none;
-    border: 1px solid #dfdfdf;
+    /* border: 1px solid #dfdfdf; */
 }
 .agentbox:hover::after{
     inset: 0;
@@ -1197,7 +1209,13 @@ position: relative;
 }
 
 @media (min-width:320px){
-   
+   .cardAgent{
+    grid-template-columns: auto;
+    text-align: center;
+   }
+   .agentbox::before{
+    left: 30%;
+   }
     .headerGrid {
         grid-template-columns: auto ;
     }
@@ -1302,5 +1320,12 @@ position: relative;
     .reverse{
         flex-direction: unset;
     }
+    .cardAgent{
+        grid-template-columns: 20% 60% 20%;
+        text-align: unset;
+       }
+       .agentbox::before{
+        left: 5%;
+       }
 }
     
