--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -392,6 +392,9 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     box-shadow: inset 0 0 10px #f9f9fb, 0 0 10px #dfdfdf;
 }
+.partners:hover{
+    cursor: e-resize;
+}
 footer {
     padding: 40px 0;
     background: var(--black);
@@ -1236,7 +1239,34 @@ position: relative;
     
     text-align: justify !important;
 }
-
+.faq-quest{
+    border: 1px solid #dfdfdf;
+    padding: 20px;
+}
+.questionBar{
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.questionBar a:hover {
+    color: var(--green);
+}
+.answer{
+    margin-top: 10px;
+    padding: 20px;
+    background-color: rgba(202, 202, 202, 0.192);
+}
+.answer p{
+    color: #333;
+    
+}
+.answer>ol>li{
+    margin: 10px 0;
+}
+.answer a{
+    text-transform: none;
+}
 @media (min-width:320px){
    .cardAgent{
     grid-template-columns: auto;
