--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -191,15 +191,15 @@ p {
   z-index: -1;
   position: absolute;
   height: 100%;
-  top: 5px;
-  left: 5px;
+  top: 0;
+  left: 0;
   transition: 0.2s;
 }
 
 .btnCstm:hover:after {
-  top: 0px;
+  top: 5px;
   color: black;
-  left: 0px;
+  left: 5px;
 }
 .btnCstm:focus:after {
   top: 0px;
@@ -220,6 +220,7 @@ p {
 .sbox {
   padding: 20px;
   border-radius: 10px;
+  margin-bottom: 30px;
 }
 
 .whyus {
@@ -1172,7 +1173,6 @@ address {
   display: grid;
   background: white;
   padding: 30px 0;
-  grid-template-columns: 30% 70%;
   align-items: center;
 }
 .testi {
@@ -1270,6 +1270,12 @@ address {
   .reverse {
     flex-direction: column-reverse;
   }
+  .testibox {
+    grid-template-columns: auto;
+  }
+  .foottab {
+    text-align: left;
+  }
 }
 
 @media (min-width: 420px) {
@@ -1281,6 +1287,9 @@ address {
   }
   .portalCard h4 {
     font-size: 1rem;
+  }
+  .foottab {
+    text-align: center;
   }
 }
 @media (min-width: 992px) {
@@ -1326,5 +1335,8 @@ address {
   }
   .agentbox::before {
     left: 5%;
+  }
+  .testibox {
+    grid-template-columns: 30% 70%;
   }
 }
