add the online student appplication form

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -567,8 +567,8 @@ footer {
 }
 label {
   text-transform: capitalize;
-  font-size: 12px;
-  margin-top: 10px;
+  /* font-size: 12px; */
+  /* margin-top: 10px; */
 }
 .contactboxes {
   background: url("https://img.freepik.com/premium-vector/ready-use-linear-sticker-customer-service_9206-7124.jpg?w=2000")
@@ -1233,6 +1233,68 @@ address {
 .answer a {
   text-transform: none;
 }
+
+/* student application form */
+.application_form .card-header {
+  color: white;
+  font-weight: 500;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  padding: 10px;
+}
+.application_form .card:nth-child(1) .card-header {
+  background-color: var(--green);
+}
+.application_form .card:nth-child(2) .card-header {
+  background-color: var(--blue);
+}
+.application_form .card:nth-child(3) .card-header {
+  background-color: var(--yellow);
+}
+.application_form .card:nth-child(4) .card-header {
+  background-color: var(--red);
+}
+.application_form .card:nth-child(5) .card-header {
+  background-color: #333;
+}
+.application_form .card:nth-child(8) .card-header {
+  background-color: var(--purple);
+}
+.application_form .card:nth-child(6) .card-header {
+  background-color: #333;
+}
+.application_form .card:nth-child(7) .card-header {
+  background-color: #333;
+}
+.application_form .card:nth-child(n + 9) .card-header {
+  background-color: #333;
+}
+
+.card-body h5 {
+  color: var(--yellow);
+  margin: 10px 0;
+  padding: 5px;
+  font-weight: 600;
+}
+.card-body h6 {
+  color: var(--black);
+  background-color: #dfdfdf;
+  margin: 10px 0;
+  padding: 5px;
+  font-weight: 600;
+}
+.form-check > label {
+  font-size: 14px;
+
+  margin: 5px 0;
+}
+.form-check > label:hover {
+  color: black;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 @media (min-width: 320px) {
   .cardAgent {
     grid-template-columns: auto;
