--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,354 +1,345 @@
 :root {
-    --mainColor: #24292e;
-    --mixture: #24292e;
-    --yellow: #f7a30a;
-
+  --mainColor: #24292e;
+  --mixture: #24292e;
+  --yellow: #f7a30a;
 }
 
 marquee {
-    display: block;
+  display: block;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .marque {
-    border-bottom: 1px solid var(--mainColor);
-
+  border-bottom: 1px solid var(--mainColor);
 }
 
 .logo {
-    width: 120px;
-    padding: 10px 0;
+  width: 120px;
+  padding: 10px 0;
 }
 
 .menu {
-    margin: 0;
+  margin: 0;
 }
 
 .header {
-
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    /*overflow: hidden;*/
-    height: auto;
-    z-index: 100;
-    margin: 0 auto;
-    
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /*overflow: hidden;*/
+  height: auto;
+  z-index: 100;
+  margin: 0 auto;
 }
 
 .header::after {
-    content: '';
-    position: absolute;
-    right: -25%;
+  content: "";
+  position: absolute;
+  right: -25%;
 
-    top: 0;
-    z-index: -1;
+  top: 0;
+  z-index: -1;
 
-    bottom: 0;
-    background: var(--mainColor);
-    transform: skew(-45deg);
+  bottom: 0;
+  background: var(--mainColor);
+  transform: skew(-45deg);
 }
 
 .submenu-link {
-    color: #071d4e !important;
+  color: #071d4e !important;
 }
 
 .wrapper {
-    padding: 0 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
 
 .menu li a,
 .menu li span {
-    color: var(--mixture);
-    position: relative;
+  color: var(--mixture);
+  position: relative;
 }
 
-.menu li a::after,.menu li span::after {
-    content: '';
-    position: absolute;
-    transition: ease-in-out all .5s;
-    height: 2px;
-    z-index: 99;
-    bottom: -10px;
-    left: 50%;
-    right: 50%;
-    background: var(--yellow);
-/*     
+.menu li a::after,
+.menu li span::after {
+  content: "";
+  position: absolute;
+  transition: ease-in-out all 0.5s;
+  height: 2px;
+  z-index: 99;
+  bottom: -10px;
+  left: 50%;
+  right: 50%;
+  background: var(--yellow);
+  /*     
     border-bottom: 2px solid var(--mainColor);
     text-decoration: none; */
-
 }
-.menu li a:hover::after{
-    left: 0;
-    right: 0;
+.menu li a:hover::after {
+  left: 0;
+  right: 0;
 }
 
 .menu li span:hover {
-    /* border-bottom: 2px solid var(--mixture); */
-
+  /* border-bottom: 2px solid var(--mixture); */
 }
 
-
 @media screen and (max-width: 992px) {
-    .navbarcstm {
-        background: var(--mainColor);
-    }
+  .navbarcstm {
+    background: var(--mainColor);
+  }
 
-    .navbarcstm {
-        position: fixed;
-        top: 0;
-        left: -100%;
-        width: 75%;
-        height: 100%;
-        z-index: 10;
-        opacity: 0;
-        overflow-y: auto;
-        visibility: hidden;
+  .navbarcstm {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 75%;
+    height: 100%;
+    z-index: 10;
+    opacity: 0;
+    overflow-y: auto;
+    visibility: hidden;
 
+    transition: all 0.5s ease;
+  }
 
-        transition: all 0.5s ease;
-    }
-
-    .navbarcstm.active {
-        left: 0rem;
-        opacity: 1;
-        visibility: visible;
-    }
+  .navbarcstm.active {
+    left: 0rem;
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .menu-item {
-    position: relative;
-    display: inline-block;
-    margin-left: 1.5rem;
+  position: relative;
+  display: inline-block;
+  margin-left: 1.5rem;
 }
 
 .menu-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    -moz-column-gap: 0.25rem;
-    column-gap: 0.25rem;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: inherit;
-    cursor: pointer;
-    text-transform: capitalize;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -moz-column-gap: 0.25rem;
+  column-gap: 0.25rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: inherit;
+  cursor: pointer;
+  text-transform: capitalize;
 
-    transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.menu-link>i.bx {
-    font-size: 1.35rem;
-    line-height: 1.5;
-    color: inherit;
+.menu-link > i.bx {
+  font-size: 1.35rem;
+  line-height: 1.5;
+  color: inherit;
 }
 
 .menu-link:hover {
-    outline: none;
+  outline: none;
 }
-.studentinformation{
-    position: absolute;
-    left: 0;    
-    top: 77px;
-    display: none;
-    backdrop-filter: blur(5px);
-    opacity: 0;
-    right: 0;    
-    -webkit-backdrop-filter: blur(5px);
-     padding: 30px 0; 
-    background: rgba(247,163,10,.9);
+.studentinformation {
+  position: absolute;
+  left: 0;
+  top: 77px;
+  display: none;
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  right: 0;
+  -webkit-backdrop-filter: blur(5px);
+  padding: 30px 0;
+  background: rgba(247, 163, 10, 0.9);
 }
-.dropinfo>ul{
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+.dropinfo > ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
-.dropinfo>ul>li{
-    /* border-bottom: 1px solid #333; */
-    padding-top: 20px;
+.dropinfo > ul > li {
+  /* border-bottom: 1px solid #333; */
+  padding-top: 20px;
 }
-.dropinfo>ul>li>a{
-    text-transform: capitalize;
-    font-size: 14px;
+.dropinfo > ul > li > a {
+  text-transform: capitalize;
+  font-size: 14px;
 }
-.dropinfo>ul>li:hover a{
-    color: white;
-    font-weight: bold;
+.dropinfo > ul > li:hover a {
+  color: white;
+  font-weight: bold;
 }
-.dropimg{
-    filter: drop-shadow(0 0 10px #999);
+.dropimg {
+  filter: drop-shadow(0 0 10px #999);
 }
-#drop{
-    /* color: var(--yellow); */
+#drop {
+  /* color: var(--yellow); */
 }
 
 @media only screen and (min-width: 993px) {
-    .studentinformation{
-        display: block;
-    }
+  .studentinformation {
+    display: block;
+  }
 }
 
 @media only screen and (max-width: 992px) {
-    .menu {
-        width: 100%;
-        height: auto;
-        padding: 1rem 0;
-        background: white;
-    }
+  .menu {
+    width: 100%;
+    height: auto;
+    padding: 1rem 0;
+    background: white;
+  }
 
-    .menu-item {
-        display: block;
-        margin: 0 auto;
-    }
+  .menu-item {
+    display: block;
+    margin: 0 auto;
+  }
 
-    .menu-link {
-        justify-content: space-between;
-        padding: 0.5rem 1.25rem;
-    }
+  .menu-link {
+    justify-content: space-between;
+    padding: 0.5rem 1.25rem;
+  }
 
-    .menu li a,
-    .menu li span {
-        color: var(--mixture);
-        border-bottom: 2px solid transparent;
-    }
+  .menu li a,
+  .menu li span {
+    color: var(--mixture);
+    border-bottom: 2px solid transparent;
+  }
 }
 
 .submenu {
-    position: absolute;
-    background-color: var(--yellow);
-    top: 2.35rem;
-    left: -2rem;
-    min-width: 13rem;
-    height: auto;
-    padding: 0 1rem 1rem;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(1rem);
-    border-radius: 0 0 0.25rem 0.25rem;
-    border-top: 2px solid var(--mainColor);
-    transition: all 0.3s ease-in-out;
+  position: absolute;
+  background-color: var(--yellow);
+  top: 2.35rem;
+  left: -2rem;
+  min-width: 13rem;
+  height: auto;
+  padding: 0 1rem 1rem;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(1rem);
+  border-radius: 0 0 0.25rem 0.25rem;
+  border-top: 2px solid var(--mainColor);
+  transition: all 0.3s ease-in-out;
 }
 
 .submenu-item {
-    display: block;
-    margin-top: 0.75rem;
+  display: block;
+  margin-top: 0.75rem;
 }
 
 .submenu-link {
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: inherit;
-    cursor: pointer;
-    transition: all 0.35s ease;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: inherit;
+  cursor: pointer;
+  transition: all 0.35s ease;
 }
 
 .submenu-link:hover {
-    outline: none;
-
+  outline: none;
 }
 
 @media only screen and (max-width: 992px) {
-    .submenu {
-        position: relative;
-        top: -0.5rem;
-        left: 1.2rem;
-        width: 100%;
-        max-height: 0;
-        padding: 0px 0px 10px 8px;
-        border: none;
-        outline: none;
-        opacity: 1;
-        overflow: hidden;
-        visibility: visible;
-        transform: translateY(0px);
-        box-shadow: none;
-        background: transparent;
-    }
+  .submenu {
+    position: relative;
+    top: -0.5rem;
+    left: 1.2rem;
+    width: 100%;
+    max-height: 0;
+    padding: 0px 0px 10px 8px;
+    border: none;
+    outline: none;
+    opacity: 1;
+    overflow: hidden;
+    visibility: visible;
+    transform: translateY(0px);
+    box-shadow: none;
+    background: transparent;
+  }
 
-    .submenu-link {
-        color: var(--mixture) !important;
-    }
+  .submenu-link {
+    color: var(--mixture) !important;
+  }
 
-    .header {
-        overflow: hidden;
-    }
+  .header {
+    overflow: hidden;
+  }
 }
 
 .burger {
-    position: relative;
-    display: none;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    width: 1.75rem;
-    height: 1rem;
-    opacity: 0;
-    visibility: hidden;
-    background: transparent;
+  position: relative;
+  display: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 1.75rem;
+  height: 1rem;
+  opacity: 0;
+  visibility: hidden;
+  background: transparent;
 }
 
 .burger-line {
-    position: absolute;
-    display: block;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: var(--mixture);
-    opacity: 1;
-    border: none;
-    outline: none;
-
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: var(--mixture);
+  opacity: 1;
+  border: none;
+  outline: none;
 }
 
 .burger-line:nth-child(1) {
-    top: 0px;
+  top: 0px;
 }
 
 .burger-line:nth-child(2) {
-    top: 0.5rem;
+  top: 0.5rem;
 }
 
 .burger-line:nth-child(3) {
-    top: 1rem;
+  top: 1rem;
 }
 
 @media only screen and (max-width: 992px) {
-    .burger {
-        display: block;
-        opacity: 1;
-        visibility: visible;
-    }
+  .burger {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 9;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.35s ease-in-out;
-    background-color: rgba(0, 0, 0, 0.65);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 9;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.35s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 @media only screen and (max-width: 992px) {
-    .overlay.active {
-        display: block;
-        opacity: 1;
-        visibility: visible;
-    }
+  .overlay.active {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+  }
 }
