--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -104,8 +104,7 @@ section:hover .heading {
     0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
-.heading:hover {
-}
+.heading:hover {}
 
 .heading::after {
   content: "";
@@ -141,8 +140,7 @@ section:hover .heading::after {
   font-weight: 400;
 }
 
-.studentData {
-}
+.studentData {}
 
 .gridStudents {
   display: grid;
@@ -150,7 +148,7 @@ section:hover .heading::after {
   grid-template-rows: auto;
 }
 
-.gridStudents > div {
+.gridStudents>div {
   background: #f2f2f2;
   text-align: center;
   border-radius: 10px;
@@ -303,8 +301,28 @@ p {
 }
 
 .whyimg {
-  border-radius: 20px;
   overflow: hidden;
+  /* Prevents scaled image from spilling out */
+  border-radius: 12px;
+  /* Optional: subtle rounded corners */
+  transition: box-shadow 0.4s ease;
+  display: block;
+}
+
+
+
+.whyimg img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.5s ease, filter 0.5s ease;
+
+}
+
+.whyimg:hover img {
+  background-color: red;
+  transform: scale(1.12);
+  filter: brightness(1.08);
 }
 
 /* service box design */
@@ -452,13 +470,16 @@ footer {
   padding: 40px 0;
   background: var(--black);
 }
+
 .source {
   font-size: 12px;
   color: #999;
 }
+
 .source a {
   font-weight: 500;
 }
+
 .obriginal {
   margin: 10px 0;
   background: rgba(0, 0, 0, 0.538);
@@ -567,13 +588,13 @@ footer {
   position: absolute;
 }
 
-.abouttxt > ul {
+.abouttxt>ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.abouttxt ul > li:hover a {
+.abouttxt ul>li:hover a {
   color: var(--green);
 }
 
@@ -664,7 +685,7 @@ label {
 }
 
 .contactboxes {
-  /* background: url("https://img.freepik.com/premium-vector/ready-use-linear-sticker-customer-service_9206-7124.jpg?w=2000") no-repeat right; */
+
   background-size: contain;
 }
 
@@ -710,7 +731,7 @@ label {
   top: 0;
   background-color: red;
   right: 0;
-  background: url("https://img.freepik.com/premium-vector/business-management-character-art-vector-flat-line-illustration_220346-10004.jpg?w=2000")
+  
     no-repeat left;
 } */
 .address {
@@ -746,16 +767,16 @@ address {
   justify-content: space-evenly;
 }
 
-.mediaBox > div {
+.mediaBox>div {
   margin: 10px 0;
   text-transform: capitalize;
 }
 
-.mediaBox > div:hover p {
+.mediaBox>div:hover p {
   color: rgb(255, 255, 255);
 }
 
-.mediaBox > div:hover a > img {
+.mediaBox>div:hover a>img {
   transform: rotateY(360deg);
 }
 
@@ -815,8 +836,7 @@ address {
   left: -20px;
 }
 
-.contactform {
-}
+.contactform {}
 
 .card-text {
   color: white;
@@ -938,7 +958,7 @@ address {
 
 .agentbox {
   position: relative;
-  /* background:url('https://img.freepik.com/premium-photo/white-cement-wall-texture-backgrounds_707519-24233.jpg?w=1380') center fixed  no-repeat;   filter: drop-shadow(5px 5px 7px #dfdfdf);  */
+
   box-shadow: inset 0 0 10px #dfdfdf;
   /* box-shadow: 15px 15px 30px #bebebe,
     -15px -15px 30px #ffffff; */
@@ -1018,20 +1038,20 @@ address {
   list-style-type: none;
 }
 
-.agenttxt ul > li {
+.agenttxt ul>li {
   position: relative;
   font-size: 14px;
   margin: 10px 0;
 }
 
-.agenttxt ul > li::before {
+.agenttxt ul>li::before {
   content: "";
   inset: 0;
   left: -10px;
   position: absolute;
 }
 
-.agenttxt ul > li > p {
+.agenttxt ul>li>p {
   color: black;
 
   font-size: 14px;
@@ -1088,11 +1108,11 @@ address {
   font-size: 26px;
 }
 
-.addon_info > ul {
+.addon_info>ul {
   list-style: none;
 }
 
-.addon_info > ul > li {
+.addon_info>ul>li {
   padding: 15px 5px;
   border-bottom: 1px solid #dfdfdf;
   background: #8eb6ff7a;
@@ -1164,7 +1184,7 @@ address {
   padding: 10px 0;
 }
 
-.coursebox ul li > ul li:nth-child(odd) {
+.coursebox ul li>ul li:nth-child(odd) {
   /* can be add style for the UI on course page */
 }
 
@@ -1173,7 +1193,7 @@ address {
   color: var(--red);
 }
 
-.coursebox > table > tbody > tr > td {
+.coursebox>table>tbody>tr>td {
   vertical-align: middle;
 }
 
@@ -1297,16 +1317,14 @@ address {
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--black);
-  background-image: -webkit-linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.2) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.2) 50%,
-    rgba(255, 255, 255, 0.2) 75%,
-    transparent 75%,
-    transparent
-  );
+  background-image: -webkit-linear-gradient(45deg,
+      rgba(255, 255, 255, 0.2) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(255, 255, 255, 0.2) 50%,
+      rgba(255, 255, 255, 0.2) 75%,
+      transparent 75%,
+      transparent);
 }
 
 .linkBox {
@@ -1331,12 +1349,12 @@ address {
   background: #ffffff;
 }
 
-.linkBox:hover .linkBody > a > img {
+.linkBox:hover .linkBody>a>img {
   filter: unset;
   transform: scale(1.4);
 }
 
-.linkBody > a > img {
+.linkBody>a>img {
   /* height:100px; */
 
   filter: grayscale();
@@ -1433,7 +1451,7 @@ address {
   color: #333;
 }
 
-.answer > ol > li {
+.answer>ol>li {
   margin: 10px 0;
 }
 
@@ -1502,13 +1520,13 @@ address {
   font-weight: 600;
 }
 
-.form-check > label {
+.form-check>label {
   font-size: 14px;
 
   margin: 5px 0;
 }
 
-.form-check > label:hover {
+.form-check>label:hover {
   color: black;
   font-weight: 600;
   cursor: pointer;
@@ -1560,7 +1578,7 @@ address {
     /* text-transform: capitalize; */
   }
 
-  .abouttxt ul > li {
+  .abouttxt ul>li {
     padding: 10px 0;
   }
 
@@ -1576,7 +1594,7 @@ address {
     grid-template-columns: 30% 30% 30%;
   }
 
-  .gridStudents > div {
+  .gridStudents>div {
     padding: 5px;
   }
 
@@ -1619,11 +1637,10 @@ address {
   }
 }
 
-@media (min-width: 420px) {
-}
+@media (min-width: 420px) {}
 
 @media (min-width: 768px) {
-  .gridStudents > div {
+  .gridStudents>div {
     padding: 20px;
   }
 
@@ -1646,7 +1663,7 @@ address {
     /* text-transform: capitalize; */
   }
 
-  .abouttxt ul > li {
+  .abouttxt ul>li {
     padding: 20px 0;
   }
 
