update the banner images

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -113,8 +113,7 @@ section:hover .heading {
     0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
-.heading:hover {
-}
+.heading:hover {}
 
 .heading::after {
   content: "";
@@ -150,8 +149,7 @@ section:hover .heading::after {
   font-weight: 400;
 }
 
-.studentData {
-}
+.studentData {}
 
 .gridStudents {
   display: grid;
@@ -159,7 +157,7 @@ section:hover .heading::after {
   grid-template-rows: auto;
 }
 
-.gridStudents > div {
+.gridStudents>div {
   background: #f2f2f2;
   text-align: center;
   border-radius: 10px;
@@ -201,6 +199,7 @@ p {
   background-color: var(--green);
   color: white !important;
 }
+
 .short {
   border-color: #777 !important;
   color: #777 !important;
@@ -209,6 +208,7 @@ p {
 .short::after {
   background: white !important;
 }
+
 .conbtn {
   border-color: var(--red) !important;
   color: var(--red) !important;
@@ -222,6 +222,7 @@ p {
   background: var(--red);
   color: white !important;
 }
+
 .bluetransparetbtn {
   border-color: var(--blue) !important;
   color: var(--blue) !important;
@@ -623,13 +624,13 @@ footer {
   position: absolute;
 }
 
-.abouttxt > ul {
+.abouttxt>ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.abouttxt ul > li:hover a {
+.abouttxt ul>li:hover a {
   color: var(--green);
 }
 
@@ -801,16 +802,16 @@ address {
   justify-content: space-evenly;
 }
 
-.mediaBox > div {
+.mediaBox>div {
   margin: 10px 0;
   text-transform: capitalize;
 }
 
-.mediaBox > div:hover p {
+.mediaBox>div:hover p {
   color: rgb(255, 255, 255);
 }
 
-.mediaBox > div:hover a > img {
+.mediaBox>div:hover a>img {
   transform: rotateY(360deg);
 }
 
@@ -822,6 +823,11 @@ address {
 
 .citymap {
   position: relative;
+}
+
+#banner .item {
+  border-radius: 25px;
+  overflow: hidden;
 }
 
 .citymap::before {
@@ -870,8 +876,7 @@ address {
   left: -20px;
 }
 
-.contactform {
-}
+.contactform {}
 
 .card-text {
   color: white;
@@ -1073,20 +1078,20 @@ address {
   list-style-type: none;
 }
 
-.agenttxt ul > li {
+.agenttxt ul>li {
   position: relative;
   font-size: 14px;
   margin: 10px 0;
 }
 
-.agenttxt ul > li::before {
+.agenttxt ul>li::before {
   content: "";
   inset: 0;
   left: -10px;
   position: absolute;
 }
 
-.agenttxt ul > li > p {
+.agenttxt ul>li>p {
   color: black;
 
   font-size: 14px;
@@ -1143,11 +1148,11 @@ address {
   font-size: 26px;
 }
 
-.addon_info > ul {
+.addon_info>ul {
   list-style: none;
 }
 
-.addon_info > ul > li {
+.addon_info>ul>li {
   padding: 15px 5px;
   border-bottom: 1px solid #dfdfdf;
   background: #8eb6ff7a;
@@ -1219,7 +1224,7 @@ address {
   padding: 10px 0;
 }
 
-.coursebox ul li > ul li:nth-child(odd) {
+.coursebox ul li>ul li:nth-child(odd) {
   /* can be add style for the UI on course page */
 }
 
@@ -1228,7 +1233,7 @@ address {
   color: var(--red);
 }
 
-.coursebox > table > tbody > tr > td {
+.coursebox>table>tbody>tr>td {
   vertical-align: middle;
 }
 
@@ -1352,16 +1357,14 @@ address {
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--black);
-  background-image: -webkit-linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.2) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.2) 50%,
-    rgba(255, 255, 255, 0.2) 75%,
-    transparent 75%,
-    transparent
-  );
+  background-image: -webkit-linear-gradient(45deg,
+      rgba(255, 255, 255, 0.2) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(255, 255, 255, 0.2) 50%,
+      rgba(255, 255, 255, 0.2) 75%,
+      transparent 75%,
+      transparent);
 }
 
 .linkBox {
@@ -1386,12 +1389,12 @@ address {
   background: #ffffff;
 }
 
-.linkBox:hover .linkBody > a > img {
+.linkBox:hover .linkBody>a>img {
   filter: unset;
   transform: scale(1.4);
 }
 
-.linkBody > a > img {
+.linkBody>a>img {
   /* height:100px; */
 
   filter: grayscale();
@@ -1490,7 +1493,7 @@ address {
   color: #333;
 }
 
-.answer > ol > li {
+.answer>ol>li {
   margin: 10px 0;
 }
 
@@ -1559,13 +1562,13 @@ address {
   font-weight: 600;
 }
 
-.form-check > label {
+.form-check>label {
   font-size: 14px;
 
   margin: 5px 0;
 }
 
-.form-check > label:hover {
+.form-check>label:hover {
   color: black;
   font-weight: 600;
   cursor: pointer;
@@ -1617,7 +1620,7 @@ address {
     /* text-transform: capitalize; */
   }
 
-  .abouttxt ul > li {
+  .abouttxt ul>li {
     padding: 10px 0;
   }
 
@@ -1633,7 +1636,7 @@ address {
     grid-template-columns: 30% 30% 30%;
   }
 
-  .gridStudents > div {
+  .gridStudents>div {
     padding: 5px;
   }
 
@@ -1676,11 +1679,10 @@ address {
   }
 }
 
-@media (min-width: 420px) {
-}
+@media (min-width: 420px) {}
 
 @media (min-width: 768px) {
-  .gridStudents > div {
+  .gridStudents>div {
     padding: 20px;
   }
 
@@ -1703,7 +1705,7 @@ address {
     /* text-transform: capitalize; */
   }
 
-  .abouttxt ul > li {
+  .abouttxt ul>li {
     padding: 10px 0;
   }
 
@@ -1862,9 +1864,11 @@ address {
   height: 4px;
   background: linear-gradient(90deg, #e74c3c, #f39c12);
 }
+
 .modern-card:hover {
   box-shadow: 0 0 10px #999;
 }
+
 .icon-circle {
   width: 64px;
   height: 64px;
@@ -1927,6 +1931,7 @@ address {
 .welcome-popup {
   display: flex !important;
 }
+
 .welcome-popup:not(.show) {
   display: none !important;
 }
